changed layout slide page

--- a/index.html
+++ b/index.html
@@ -17,23 +17,24 @@
       <header>
         <h1>Slides</h1>
         <p></p>
-        <p class="view"><a href="https://github.com/emanjavacas/slides">View the Project on GitHub <small>emanjavacas/slides</small></a></p>
+        <p class="view">This is my personal repository of presentation slides for presentations that
+	  I've been giving in the last years. So far, these slides have been crafted with the help
+	  of reveal and the brilliant org-mode port org-reveal.</p>
         <!-- <ul> -->
         <!-- </ul> -->
       </header>
       <section>
         <h3>
-	  <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+	  <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome to my slides.</h3>
 	<ul>
-	  <li><a href="http://emanjavacas.github.io/slides/catalan_spanish.html">Urbane Prozesse</a> Catalan spanish</li>
-	  <li><a href="http://emanjavacas.github.io/slides/gender.html">Sociolinguistik</a> Gender differences in language Use</li>
-	  <li><a href="http://emanjavacas.github.io/slides/troonredes.html">Troonredes</a> Topic modeling van de Nederlandse Troonredes</li>
-	  <li><a href="http://emanjavacas.github.io/slides/urban_tweeters.html">Urban Tweeters</a> Mapping urban multilingualism through Twitter</li>
-	  <li><a href="http://emanjavacas.github.io/slides/asynchronous.html">Corpus Linguistics 2.0</li>
+	  <li><a href="http://emanjavacas.github.io/slides/asynchronous.html">Corpus Linguistics 2.0 (Saarbrücken; June 2016)</li>
+	  <li><a href="http://emanjavacas.github.io/slides/urban_tweeters.html">Urban Tweeters</a> Mapping urban multilingualism through Twitter (DH-Benelux; June 2015)</li>
+	  <li><a href="http://emanjavacas.github.io/slides/troonredes.html">Troonredes</a> Topic modeling van de Nederlandse Troonredes (Antwerp; May 2015)</li>
+	  <li><a href="http://emanjavacas.github.io/slides/gender.html">Sociolinguistik</a> Gender differences in language Use (Antwerp; January 2015)</li>
+	  <li><a href="http://emanjavacas.github.io/slides/catalan_spanish.html">Urbane Prozesse</a> Catalan spanish (Berlin; April 2014)</li>
 	</ul>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/emanjavacas">emanjavacas</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
