--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <h3>
 	  <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome to my slides.</h3>
 	<ul>
-	  <li><a href="http://emanjavacas.github.io/slides/asynchronous.html">Corpus Linguistics 2.0 (Saarbrücken; June 2016)</li>
-	  <li><a href="http://emanjavacas.github.io/slides/urban_tweeters.html">Urban Tweeters</a> Mapping urban multilingualism through Twitter (DH-Benelux; June 2015)</li>
-	  <li><a href="http://emanjavacas.github.io/slides/troonredes.html">Troonredes</a> Topic modeling van de Nederlandse Troonredes (Antwerp; May 2015)</li>
-	  <li><a href="http://emanjavacas.github.io/slides/gender.html">Sociolinguistik</a> Gender differences in language Use (Antwerp; January 2015)</li>
-	  <li><a href="http://emanjavacas.github.io/slides/catalan_spanish.html">Urbane Prozesse</a> Catalan spanish (Berlin; April 2014)</li>
+	  <li><a href="http://emanjavacas.github.io/slides/asynchronous.html">Corpus Linguistics 2.0</a><small> (Saarbrücken; June 2016)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides/urban_tweeters.html">Urban Tweeters</a><small>Mapping urban multilingualism through Twitter (DH-Benelux; June 2015)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides/troonredes.html">Troonredes</a><small>Topic modeling van de Nederlandse Troonredes (Antwerp; May 2015)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides/gender.html">Sociolinguistik</a><small>Gender differences in language Use (Antwerp; January 2015)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides/catalan_spanish.html">Urbane Prozesse</a><small>Catalan spanish (Berlin; April 2014)</small></li>
 	</ul>
       </section>
       <footer>
