--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 	  <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome to my slides.</h3>
 	<ul>
 	  <li><a href="http://emanjavacas.github.io/slides/asynchronous.html">Corpus Linguistics 2.0</a><small> (Saarbrücken; June 2016)</small></li>
-	  <li><a href="http://emanjavacas.github.io/slides/urban_tweeters.html">Urban Tweeters</a><small>Mapping urban multilingualism through Twitter (DH-Benelux; June 2015)</small></li>
-	  <li><a href="http://emanjavacas.github.io/slides/troonredes.html">Troonredes</a><small>Topic modeling van de Nederlandse Troonredes (Antwerp; May 2015)</small></li>
-	  <li><a href="http://emanjavacas.github.io/slides/gender.html">Sociolinguistik</a><small>Gender differences in language Use (Antwerp; January 2015)</small></li>
-	  <li><a href="http://emanjavacas.github.io/slides/catalan_spanish.html">Urbane Prozesse</a><small>Catalan spanish (Berlin; April 2014)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides/urban_tweeters.html">Urban Tweeters: Mapping urban multilingualism through Twitter</a><small> (DH-Benelux; June 2015)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides/troonredes.html">Topic modeling van de Nederlandse Troonredes</a><small> (Antwerp; May 2015)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides/gender.html">Gender differences in language Use</a><small> (Antwerp; January 2015)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides/catalan_spanish.html">Catalan spanish</a><small> (Berlin; April 2014)</small></li>
 	</ul>
       </section>
       <footer>
