--- a/datech17/index.html
+++ b/datech17/index.html
@@ -27,7 +27,7 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1>Enabling Annotation of Historical Corpora in an Asynchronous Collaborative Environment</h1><h2>Enrique Manjavacas &amp; Peter Petré</h2><h4>01/06/2016</h4><p>https://emanjavacas.github.com/slides/datech17</p>
+<section id="sec-title-slide"><h1>Enabling Annotation of Historical Corpora in an Asynchronous Collaborative Environment</h1><h2>Enrique Manjavacas &amp; Peter Petré</h2><h4>DATECH17 01/06/2016 GÖTTINGEN</h4><p>https://emanjavacas.github.com/slides/datech17</p>
 </section>
 
 <section>
