--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
         <!-- </ul> -->
       </header>
       <section>
-        <h3>
-	  <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome to my slides.</h3>
-	<ul>
+	<ul style="padding:0">
 	  <li><a href="http://emanjavacas.github.io/slides/datech17">Enabling Annotation of Historical Corpora in an Asynchronous Collaborative Environment</a><small> (DATECH17; June 2017)</small></li>
 	  <li><a href="http://emanjavacas.github.io/slides/asynchronous.html">Corpus Linguistics 2.0</a><small> (Saarbrücken; June 2016)</small></li>
 	  <li><a href="http://emanjavacas.github.io/slides/urban_tweeters.html">Urban Tweeters: Mapping urban multilingualism through Twitter</a><small> (DH-Benelux; June 2015)</small></li>
