--- a/datech17/index.html
+++ b/datech17/index.html
@@ -118,6 +118,10 @@
 <section>
 <section id="slide-orgheadline8">
 <h3 id="orgheadline8">Linkage problem</h3>
+<div class="outline-text-3" id="text-orgheadline8">
+</div></section>
+<section id="slide-orgheadline6">
+<h4 id="orgheadline6">Typical Corpus Linguistics Workflow</h4>
 <aside class="notes">
 <ul>
 <li>Once hits have been extracted/annotated, back-pointers to the corpus are missing.</li>
@@ -128,9 +132,6 @@
 
 </aside>
 
-</section>
-<section id="slide-orgheadline6">
-<h4 id="orgheadline6">Typical Corpus Linguistics Workflow</h4>
 
 <div class="figure">
 <p><img src="./img/querytospread.png" alt="querytospread.png" class="fragment roll-in" />
@@ -331,6 +332,9 @@ Drawing inspiration from GitHub, and adding multi-user real-time features
 </section>
 <section id="slide-orgheadline18">
 <h4 id="orgheadline18">Web-based Client</h4>
+</section>
+<section >
+
 <aside class="notes">
 <p>
 Messaging pattern where senders (publishers), do not directly message specific receivers (subscribers), but instead characterize messages into classes without knowledge of which subscribers, if any, there may be. Similarly, subscribers express interest in one or more classes and only receive messages that are of interest, without knowledge of which publishers, if any, there are.
@@ -338,8 +342,6 @@ Messaging pattern where senders (publishers), do not directly message specific r
 
 </aside>
 
-</section>
-<section >
 <p>
 Real-time feedback client-to-client following a <b>Pub/Sub</b> architecture
 <img src="./img/project.png" alt="project.png" />
