adapt link to new repo name

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       </header>
       <section>
 	<ul>
-	  <li><a href="http://emanjavacas.github.io/slides/datech-17">Enabling Annotation of Historical Corpora in an Asynchronous Collaborative Environment</a><small> (DATECH17; June 2017)</small></li>
-	  <li><a href="http://emanjavacas.github.io/slides/tilburg-git-16">Intro to git</a></li>
-	  <li><a href="http://emanjavacas.github.io/slides/saarbruecken-asynchronous-16">Corpus Linguistics 2.0</a><small> (Saarbrücken; June 2016)</small></li>
-	  <li><a href="http://emanjavacas.github.io/slides/dhbenelux-twitter-15">Urban Tweeters: Mapping urban multilingualism through Twitter</a><small> (DH-Benelux; June 2015)</small></li>
-	  <li><a href="http://emanjavacas.github.io/slides/antwerp-topic-15">Topic modeling van de Nederlandse Troonredes</a><small> (Antwerp; May 2015)</small></li>
-	  <li><a href="http://emanjavacas.github.io/slides/antwerp-gender-14">Gender differences in language Use</a><small> (Antwerp; January 2015)</small></li>
-	  <li><a href="http://emanjavacas.github.io/slides/berlin-catalan-14">Catalan spanish</a><small> (Berlin; April 2014)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides-content/datech-17">Enabling Annotation of Historical Corpora in an Asynchronous Collaborative Environment</a><small> (DATECH17; June 2017)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides-content/tilburg-git-16">Intro to git</a></li>
+	  <li><a href="http://emanjavacas.github.io/slides-content/saarbruecken-asynchronous-16">Corpus Linguistics 2.0</a><small> (Saarbrücken; June 2016)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides-content/dhbenelux-twitter-15">Urban Tweeters: Mapping urban multilingualism through Twitter</a><small> (DH-Benelux; June 2015)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides-content/antwerp-topic-15">Topic modeling van de Nederlandse Troonredes</a><small> (Antwerp; May 2015)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides-content/antwerp-gender-14">Gender differences in language Use</a><small> (Antwerp; January 2015)</small></li>
+	  <li><a href="http://emanjavacas.github.io/slides-content/berlin-catalan-14">Catalan spanish</a><small> (Berlin; April 2014)</small></li>
 	</ul>
       </section>
     </div>
