--- a/santiago-ccnlg-17/index.html
+++ b/santiago-ccnlg-17/index.html
@@ -28,12 +28,12 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1>Synthetic Literature</h1><h3>Writing Science-Fiction in a Co-Creative Process</h3><h4>Enrique Manjavacas &amp; Folgert Karsdorp &amp; Ben Burtenshaw &amp; Mike Kestemont</h4><h4>INLG17 (CC-NLG) - Santiago de Compostela - 04/09/2017</h4><p><a href="https://emanjavacas.github.com/slides/santiago-inlg-17">https://emanjavacas.github.com/slides/santiago-ilng-17</a></p>
+<section id="sec-title-slide"><h1 class="title">Synthetic Literature</h1><h2 class="author">Enrique Manjavacas &amp; Folgert Karsdorp &amp; Ben Burtenshaw &amp; Mike Kestemont</h2><h2 class="date">04/09/2017</h2>
 </section>
 
 <section>
-<section id="slide-org8c704f1">
-<h2 id="org8c704f1"><span class="section-number-2">1</span> Background</h2>
+<section id="slide-org22fc41e">
+<h2 id="org22fc41e"><span class="section-number-2">1</span> Background</h2>
 <ul>
 <li>Collective for the Promotion of the Dutch Book (CPNB)</li>
 <li>Dutch Book Week</li>
@@ -64,8 +64,8 @@ The CPNB is a trust and PR agency based in The Netherlands that aims to promote 
 </aside>
 
 </section>
-<section id="slide-org7689663">
-<h3 id="org7689663">The Request</h3>
+<section id="slide-orgab3b150">
+<h3 id="orgab3b150">The Request</h3>
 <p>
 Write a story about robots, using a robot, in relation to &ldquo;I, Robot&rdquo;
 </p>
@@ -83,8 +83,8 @@ So originally we were asked for a full novel.
 
 
 </section>
-<section id="slide-orgea6b1c9">
-<h3 id="orgea6b1c9">The Proposal</h3>
+<section id="slide-org16c0907">
+<h3 id="org16c0907">The Proposal</h3>
 <p>
 Co-creatively write a science-fiction story using a system trained on similar literature
 </p>
@@ -113,8 +113,8 @@ We proposed a system that allowed an author to orchestrate generated text into a
 </aside>
 
 </section>
-<section id="slide-org9da11e1">
-<h3 id="org9da11e1">The Author: Ronald Giphart</h3>
+<section id="slide-org6d8a18a">
+<h3 id="org6d8a18a">The Author: Ronald Giphart</h3>
 <img src="img/rg.jpg" alt="Image of Ronalf Giphart">
 
 <aside class="notes">
@@ -141,8 +141,8 @@ Here, taking user edit behavior as a proxy for output quality.
 </aside>
 
 </section>
-<section id="slide-org3b2089a">
-<h4 id="org3b2089a">The Genre</h4>
+<section id="slide-org7161691">
+<h4 id="org7161691">The Genre</h4>
 <p>
 Science Fiction is open to collaborating with researchers on experimental projects
 </p>
@@ -167,8 +167,8 @@ Ronald Giphart, the author, was eager to collaborate because as a writer interes
 </section>
 </section>
 <section>
-<section id="slide-org2624ed0">
-<h2 id="org2624ed0"><span class="section-number-2">2</span> Co-creativity</h2>
+<section id="slide-org0e66a41">
+<h2 id="org0e66a41"><span class="section-number-2">2</span> Co-creativity</h2>
 <blockquote nil>
 <p>
 &#x2026; a collaborative process between multiple agents, where in this context, one agent is a computational system. 
@@ -192,8 +192,8 @@ Davis sees co-creativity as the ’blending’ of improvisational forces [@davis
 </aside>
 
 </section>
-<section id="slide-orgb42034a">
-<h3 id="orgb42034a">Different Takes on Co-creativity</h3>
+<section id="slide-org8f8a15d">
+<h3 id="org8f8a15d">Different Takes on Co-creativity</h3>
 <ul>
 <li>The public are suspicious of systems that purport to be &ldquo;autonomous&rdquo; but involve human participation (Jordanous 2017)</li>
 <li>For Lubart the opposite is the case (Lubart 2005)</li>
@@ -221,8 +221,8 @@ In this project we are most interested in achieving the last, though in practice
 </aside>
 
 </section>
-<section id="slide-orgcd9bad1">
-<h4 id="orgcd9bad1">Computer as colleague</h4>
+<section id="slide-orgd32f148">
+<h4 id="orgd32f148">Computer as colleague</h4>
 <ul>
 <li>A competent agent within the writing process</li>
 <li>A verifiable contribution to the end product</li>
@@ -243,8 +243,8 @@ Their role may overlap heavily with the user, but their participation is certain
 </aside>
 
 </section>
-<section id="slide-org714a75f">
-<h4 id="org714a75f">Computer as penpal</h4>
+<section id="slide-org40bae34">
+<h4 id="org40bae34">Computer as penpal</h4>
 <ul>
 <li>A subordinate agent, that eases the objective of the user</li>
 <li>Does not challenge the user</li>
@@ -278,8 +278,8 @@ We gave them a detailed explanation of the output of generated text, with multip
 </section>
 </section>
 <section>
-<section id="slide-orga0c058e">
-<h2 id="orga0c058e"><span class="section-number-2">3</span> Related Work</h2>
+<section id="slide-org2d42480">
+<h2 id="org2d42480"><span class="section-number-2">3</span> Related Work</h2>
 <aside class="notes">
 <p>
 There are two established approaches within existing literature: the structural diagramatic approach, and the auto-completion approach. 
@@ -287,8 +287,8 @@ There are two established approaches within existing literature: the structural 
 
 </aside>
 </section>
-<section id="slide-orgae19b71">
-<h3 id="orgae19b71">The Structural Diagramatic Approach</h3>
+<section id="slide-orgf04d78b">
+<h3 id="orgf04d78b">The Structural Diagramatic Approach</h3>
 <p>
 Maps the narrative steps of a story for the writer to manipulate into an eventual story structure, the system will then use probabilistic modeling to generate language around that skeleton (Ahn et al. 2016)
 </p>
@@ -299,14 +299,30 @@ Maps the narrative steps of a story for the writer to manipulate into an eventua
 </p>
 
 <p>
-Ahn, Morbini and Gordon use causal graphs to map the narrative steps of a story which the writer can manipulate into the eventual story structure, the system will then use probabilistic modeling to generate language around that skeleton. This approach gives the system access to the abstract narrative core of a story’s structure; arguably, in doing so the system imposes upon the writer a far more structured approach than they are possibly familiar with. A collaborative system should be able to fit within a writers existing working process [@ahn<sub>improving</sub><sub>2016</sub>].
+Ahn, Morbini and Gordon use causal graphs to map the narrative steps of a story which the writer can manipulate into the eventual story structure, 
+</p>
+
+<p>
+the system will then use probabilistic modeling to generate language around that skeleton. 
+</p>
+
+<p>
+This approach gives the system access to the abstract narrative core of a story’s structure; arguably, 
+</p>
+
+<p>
+in doing so the system imposes upon the writer a more structured approach than they may be familiar with. 
+</p>
+
+<p>
+A collaborative system should be able to fit within a writers existing working process [@ahn<sub>improving</sub><sub>2016</sub>].
 </p>
 
 </aside>
 
 </section>
-<section id="slide-orgc9043f0">
-<h3 id="orgc9043f0">The Auto-Completion Approach</h3>
+<section id="slide-org6b4fc7f">
+<h3 id="org6b4fc7f">The Auto-Completion Approach</h3>
 <p>
 The writer is prompted with possible sentences (Roemmele 2015)
 </p>
@@ -317,7 +333,15 @@ The writer is prompted with possible sentences (Roemmele 2015)
 </p>
 
 <p>
-Roemelle and Gordon offer a more hands on approach to assistive writing. Their system acts as a ’Narrative Auto-Completion’, where the writer is prompted with possible sentences [@roemmele<sub>creative</sub><sub>2015</sub>]. Though straightforward, this approach is highly intuitive and unobtrusive; however, the system risks fulfilling the role of tool rather than collaborator. 
+Roemelle and Gordon offer a more hands on approach to assistive writing. 
+</p>
+
+<p>
+Their system acts as a ’Narrative Auto-Completion’, where the writer is prompted with possible sentences [@roemmele<sub>creative</sub><sub>2015</sub>]. 
+</p>
+
+<p>
+Though straightforward, this approach is highly intuitive and unobtrusive; however, the system risks fulfilling the role of tool rather than collaborator. 
 </p>
 
 </aside>
@@ -325,12 +349,12 @@ Roemelle and Gordon offer a more hands on approach to assistive writing. Their s
 </section>
 </section>
 <section>
-<section id="slide-orga3f8e8e">
-<h2 id="orga3f8e8e"><span class="section-number-2">4</span> Method</h2>
+<section id="slide-org01bf29c">
+<h2 id="org01bf29c"><span class="section-number-2">4</span> Method</h2>
 <div class="outline-text-2" id="text-4">
 </div></section>
-<section id="slide-org36fa00f">
-<h3 id="org36fa00f">Data Collection and Preprocessing</h3>
+<section id="slide-org45108ef">
+<h3 id="org45108ef">Data Collection and Preprocessing</h3>
 <aside class="notes">
 <p>
 Automatically collected corpus of dutch novels
@@ -344,8 +368,8 @@ Automatically collected corpus of dutch novels
 </ul>
 
 </section>
-<section id="slide-orgd395288">
-<h4 id="orgd395288">Statistics</h4>
+<section id="slide-orgba7939b">
+<h4 id="orgba7939b">Statistics</h4>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -384,12 +408,12 @@ Automatically collected corpus of dutch novels
 </table>
 
 </section>
-<section id="slide-org290d4a2">
-<h3 id="org290d4a2">Recurrent Neural Network Language Model (RNNLM) for Text Generation</h3>
-<div class="outline-text-3" id="text-org290d4a2">
+<section id="slide-org0285878">
+<h3 id="org0285878">Recurrent Neural Network Language Model (RNNLM) for Text Generation</h3>
+<div class="outline-text-3" id="text-org0285878">
 </div></section>
-<section id="slide-org5049e12">
-<h4 id="org5049e12">Language Model</h4>
+<section id="slide-org9459980">
+<h4 id="org9459980">Language Model</h4>
 <p>
 \(P(The, cat, sat, on, the, mat, .)\) =
 <br/><span class="fragment fade-in"> \(P(The | \text{<}bos\text{>})\)
@@ -431,8 +455,8 @@ RNNLM Implementation (Embedding + Hidden RNN Layer + Output Layer + Softmax)
 <img src="img/rnnlm.svg" alt="RNNLM graph">
 
 </section>
-<section id="slide-org4bcb94e">
-<h4 id="org4bcb94e">Text Generation</h4>
+<section id="slide-orga01eb58">
+<h4 id="orga01eb58">Text Generation</h4>
 <p>
 Sample &ldquo;n&rdquo; characters from the Language Model
 </p>
@@ -466,8 +490,8 @@ Multinomial sampling with temperature
 </ul>
 
 </section>
-<section id="slide-org88d7cf4">
-<h4 id="org88d7cf4">Character-level</h4>
+<section id="slide-orgdffcfbf">
+<h4 id="orgdffcfbf">Character-level</h4>
 <p>
 We run the model at the character level instead of word level
 </p>
@@ -479,8 +503,8 @@ We run the model at the character level instead of word level
 </ul>
 
 </section>
-<section id="slide-org8f6652a">
-<h3 id="org8f6652a">Model fitting</h3>
+<section id="slide-orgbd45c7f">
+<h3 id="orgbd45c7f">Model fitting</h3>
 <ul>
 <li>Different parameter configurations resulting in different model sizes</li>
 <li>Sizes range from medium (10M) to big (90m)</li>
@@ -488,8 +512,8 @@ We run the model at the character level instead of word level
 </ul>
 
 </section>
-<section id="slide-org9b5b95b">
-<h4 id="org9b5b95b">Model parameters</h4>
+<section id="slide-org0692fef">
+<h4 id="org0692fef">Model parameters</h4>
 <aside class="notes">
 <p>
 We explore parameter value in the following ranges.
@@ -534,8 +558,8 @@ We explore parameter value in the following ranges.
 </table>
 
 </section>
-<section id="slide-org5ba94f0">
-<h4 id="org5ba94f0">Training</h4>
+<section id="slide-org25a2756">
+<h4 id="org25a2756">Training</h4>
 <aside class="notes">
 <p>
 For the record, Here are the details in case someone is interested in the particular setup
@@ -588,8 +612,8 @@ Stochastic Gradient Descent (SGD) + bells and whistles
 </table>
 
 </section>
-<section id="slide-org804aed3">
-<h3 id="org804aed3">Voices</h3>
+<section id="slide-org035242f">
+<h3 id="org035242f">Voices</h3>
 <aside class="notes">
 <p>
 In order to engage the user, we developed a feature that we call &rsquo;voices&rsquo;
@@ -613,12 +637,12 @@ Overfitting: situation where a model stays very close to its training data
 </section>
 </section>
 <section>
-<section id="slide-orga481086">
-<h2 id="orga481086"><span class="section-number-2">5</span> User Interface</h2>
+<section id="slide-orgb70a841">
+<h2 id="orgb70a841"><span class="section-number-2">5</span> User Interface</h2>
 <div class="outline-text-2" id="text-5">
 </div></section>
-<section id="slide-org66234bb">
-<h3 id="org66234bb">Visual Interface</h3>
+<section id="slide-org8e923a5">
+<h3 id="org8e923a5">Visual Interface</h3>
 <img alt="Image of the writing application" src="img/app1.png">
 
 <aside class="notes">
@@ -642,8 +666,8 @@ This allows them to understand the system&rsquo;s role within the process of wri
 </aside>
 
 </section>
-<section id="slide-org4f9f161" data-background="./img/app.gif" data-background-transition="slide">
-<h3 id="org4f9f161">Annotation</h3>
+<section id="slide-orgdd2470e" data-background="./img/app.gif" data-background-transition="slide">
+<h3 id="orgdd2470e">Annotation</h3>
 <aside class="notes">
 <p>
 The text is visually annotated, which reveals to the writer how generated text is affecting their own writing. 
@@ -662,15 +686,20 @@ As the writer works into text, they could easily lose track of its source; there
 </section>
 </section>
 <section>
-<section id="slide-orga8e77c4">
-<h2 id="orga8e77c4"><span class="section-number-2">6</span> Examples</h2>
+<section id="slide-orgd414a46">
+<h2 id="orgd414a46"><span class="section-number-2">6</span> Examples</h2>
+<aside class="notes">
+<p>
+However, you will not think about it. You need to know what&rsquo;s really going on. Do you still have a clue how it should be possible to solve the case? &ldquo;
+</p>
 
+</aside>
 
 </section>
 </section>
 <section>
-<section id="slide-orgee14f43">
-<h2 id="orgee14f43"><span class="section-number-2">7</span> Conclusion</h2>
+<section id="slide-org267d234">
+<h2 id="org267d234"><span class="section-number-2">7</span> Conclusion</h2>
 <ul>
 <li>A new dutch edition of &rsquo;I, Robot&rsquo; with a 10th co-created story will be published in November</li>
 <li>The interface will be deployed for the general public</li>
