--- a/santiago-ccnlg-17/index.html
+++ b/santiago-ccnlg-17/index.html
@@ -28,12 +28,12 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1>Synthetic Literature</h1><h3>Writing Science-Fiction in a Co-Creative Process</h3><h4>Enrique Manjavacas &amp; Folgert Karsdorp &amp; Ben Burtenshaw &amp; Mike Kestemont</h4><h4>INLG17 (CC-NLG) - Santiago de Compostela - 04/09/2017</h4><p><a href="https://emanjavacas.github.com/slides/santiago-inlg-17">https://emanjavacas.github.com/slides/santiago-ilng-17</a></p>
+<section id="sec-title-slide"><h1>Synthetic Literature</h1><h3>Writing Science-Fiction in a Co-Creative Process</h3><h4>Enrique Manjavacas &amp; Folgert Karsdorp &amp; Ben Burtenshaw &amp; Mike Kestemont</h4><h4>INLG17 (CC-NLG) - Santiago de Compostela - 04/09/2017</h4><p><a href="https://emanjavacas.github.com/slides-content/santiago-ccnlg-17">https://emanjavacas.github.com/slides-content/santiago-cclng-17</a></p>
 </section>
 
 <section>
-<section id="slide-org75522c7">
-<h2 id="org75522c7"><span class="section-number-2">1</span> Background</h2>
+<section id="slide-orga1627ee">
+<h2 id="orga1627ee"><span class="section-number-2">1</span> Background</h2>
 <ul>
 <li>Collective for the Promotion of the Dutch Book (CPNB)</li>
 <li>Dutch Book Week</li>
@@ -64,8 +64,8 @@ The CPNB is a trust and PR agency based in The Netherlands that aims to promote 
 </aside>
 
 </section>
-<section id="slide-org57badb7">
-<h3 id="org57badb7">The Request</h3>
+<section id="slide-orgb76877c">
+<h3 id="orgb76877c">The Request</h3>
 <p>
 Write a story about robots, using a robot, in relation to &ldquo;I, Robot&rdquo;
 </p>
@@ -83,8 +83,8 @@ So originally we were asked for a full novel.
 
 
 </section>
-<section id="slide-org6acb679">
-<h3 id="org6acb679">The Proposal</h3>
+<section id="slide-org157d3ab">
+<h3 id="org157d3ab">The Proposal</h3>
 <p>
 Co-creatively write a science-fiction story using a system trained on similar literature
 </p>
@@ -113,8 +113,8 @@ We proposed a system that allowed an author to orchestrate generated text into a
 </aside>
 
 </section>
-<section id="slide-org01e3696">
-<h3 id="org01e3696">The Author: Ronald Giphart</h3>
+<section id="slide-org9566403">
+<h3 id="org9566403">The Author: Ronald Giphart</h3>
 <img src="img/rg.jpg" alt="Image of Ronalf Giphart">
 
 <aside class="notes">
@@ -141,8 +141,8 @@ Here, taking user edit behavior as a proxy for output quality.
 </aside>
 
 </section>
-<section id="slide-org4edd060">
-<h4 id="org4edd060">The Genre</h4>
+<section id="slide-org5125a04">
+<h4 id="org5125a04">The Genre</h4>
 <p>
 Science Fiction is open to collaborating with researchers on experimental projects
 </p>
@@ -167,8 +167,8 @@ Ronald Giphart, the author, was eager to collaborate because as a writer interes
 </section>
 </section>
 <section>
-<section id="slide-orgb1f7466">
-<h2 id="orgb1f7466"><span class="section-number-2">2</span> Co-creativity</h2>
+<section id="slide-org80b847a">
+<h2 id="org80b847a"><span class="section-number-2">2</span> Co-creativity</h2>
 <blockquote nil>
 <p>
 &#x2026; a collaborative process between multiple agents, where in this context, one agent is a computational system. 
@@ -192,8 +192,8 @@ Davis sees co-creativity as the ’blending’ of improvisational forces [@davis
 </aside>
 
 </section>
-<section id="slide-orgc81f604">
-<h3 id="orgc81f604">Different Takes on Co-creativity</h3>
+<section id="slide-org60960c6">
+<h3 id="org60960c6">Different Takes on Co-creativity</h3>
 <ul>
 <li>The public are suspicious of systems that purport to be &ldquo;autonomous&rdquo; but involve human participation (Jordanous 2017)</li>
 <li>For Lubart the opposite is the case (Lubart 2005)</li>
@@ -221,8 +221,8 @@ In this project we are most interested in achieving the last, though in practice
 </aside>
 
 </section>
-<section id="slide-org319dec2">
-<h4 id="org319dec2">Computer as colleague</h4>
+<section id="slide-org2b8a215">
+<h4 id="org2b8a215">Computer as colleague</h4>
 <ul>
 <li>A competent agent within the writing process</li>
 <li>A verifiable contribution to the end product</li>
@@ -243,8 +243,8 @@ Their role may overlap heavily with the user, but their participation is certain
 </aside>
 
 </section>
-<section id="slide-org14f1d8d">
-<h4 id="org14f1d8d">Computer as penpal</h4>
+<section id="slide-org9074a2d">
+<h4 id="org9074a2d">Computer as penpal</h4>
 <ul>
 <li>A subordinate agent, that eases the objective of the user</li>
 <li>Does not challenge the user</li>
@@ -278,8 +278,8 @@ We gave them a detailed explanation of the output of generated text, with multip
 </section>
 </section>
 <section>
-<section id="slide-orgf3c6ffe">
-<h2 id="orgf3c6ffe"><span class="section-number-2">3</span> Related Work</h2>
+<section id="slide-org7ed8314">
+<h2 id="org7ed8314"><span class="section-number-2">3</span> Related Work</h2>
 <aside class="notes">
 <p>
 There are two established approaches within existing literature: the structural diagramatic approach, and the auto-completion approach. 
@@ -287,8 +287,8 @@ There are two established approaches within existing literature: the structural 
 
 </aside>
 </section>
-<section id="slide-org4336822">
-<h3 id="org4336822">The Structural Diagramatic Approach</h3>
+<section id="slide-org601294c">
+<h3 id="org601294c">The Structural Diagramatic Approach</h3>
 <p>
 Maps the narrative steps of a story for the writer to manipulate into an eventual story structure, the system will then use probabilistic modeling to generate language around that skeleton (Ahn et al. 2016)
 </p>
@@ -321,8 +321,8 @@ A collaborative system should be able to fit within a writers existing working p
 </aside>
 
 </section>
-<section id="slide-org322b7be">
-<h3 id="org322b7be">The Auto-Completion Approach</h3>
+<section id="slide-orgc5317ac">
+<h3 id="orgc5317ac">The Auto-Completion Approach</h3>
 <p>
 The writer is prompted with possible sentences (Roemmele 2015)
 </p>
@@ -349,12 +349,12 @@ Though straightforward, this approach is highly intuitive and unobtrusive; howev
 </section>
 </section>
 <section>
-<section id="slide-orgd9dcf97">
-<h2 id="orgd9dcf97"><span class="section-number-2">4</span> Method</h2>
+<section id="slide-org9575467">
+<h2 id="org9575467"><span class="section-number-2">4</span> Method</h2>
 <div class="outline-text-2" id="text-4">
 </div></section>
-<section id="slide-orga31d6d3">
-<h3 id="orga31d6d3">Data Collection and Preprocessing</h3>
+<section id="slide-org86c2cb9">
+<h3 id="org86c2cb9">Data Collection and Preprocessing</h3>
 <aside class="notes">
 <p>
 Automatically collected corpus of dutch novels
@@ -368,8 +368,8 @@ Automatically collected corpus of dutch novels
 </ul>
 
 </section>
-<section id="slide-org3aa2df0">
-<h4 id="org3aa2df0">Statistics</h4>
+<section id="slide-orga1dcf45">
+<h4 id="orga1dcf45">Statistics</h4>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -408,12 +408,12 @@ Automatically collected corpus of dutch novels
 </table>
 
 </section>
-<section id="slide-org39790f3">
-<h3 id="org39790f3">Recurrent Neural Network Language Model (RNNLM) for Text Generation</h3>
-<div class="outline-text-3" id="text-org39790f3">
+<section id="slide-org4c8ed74">
+<h3 id="org4c8ed74">Recurrent Neural Network Language Model (RNNLM) for Text Generation</h3>
+<div class="outline-text-3" id="text-org4c8ed74">
 </div></section>
-<section id="slide-org0a15603">
-<h4 id="org0a15603">Language Model</h4>
+<section id="slide-org98b0883">
+<h4 id="org98b0883">Language Model</h4>
 <p>
 \(P(The, cat, sat, on, the, mat, .)\) =
 <br/><span class="fragment fade-in"> \(P(The | \text{<}bos\text{>})\)
@@ -455,8 +455,8 @@ RNNLM Implementation (Embedding + Hidden RNN Layer + Output Layer + Softmax)
 <img src="img/rnnlm.svg" alt="RNNLM graph">
 
 </section>
-<section id="slide-orgc523c14">
-<h4 id="orgc523c14">Text Generation</h4>
+<section id="slide-org8641b1a">
+<h4 id="org8641b1a">Text Generation</h4>
 <p>
 Sample &ldquo;n&rdquo; characters from the Language Model
 </p>
@@ -490,8 +490,8 @@ Multinomial sampling with temperature
 </ul>
 
 </section>
-<section id="slide-org49e80f1">
-<h4 id="org49e80f1">Character-level</h4>
+<section id="slide-orgee0964d">
+<h4 id="orgee0964d">Character-level</h4>
 <p>
 We run the model at the character level instead of word level
 </p>
@@ -503,8 +503,8 @@ We run the model at the character level instead of word level
 </ul>
 
 </section>
-<section id="slide-org0a0dde5">
-<h3 id="org0a0dde5">Model fitting</h3>
+<section id="slide-org7fcaedd">
+<h3 id="org7fcaedd">Model fitting</h3>
 <ul>
 <li>Different parameter configurations resulting in different model sizes</li>
 <li>Sizes range from medium (10M) to big (90m)</li>
@@ -512,8 +512,8 @@ We run the model at the character level instead of word level
 </ul>
 
 </section>
-<section id="slide-org9d78de8">
-<h4 id="org9d78de8">Model parameters</h4>
+<section id="slide-orgffbf4cd">
+<h4 id="orgffbf4cd">Model parameters</h4>
 <aside class="notes">
 <p>
 We explore parameter value in the following ranges.
@@ -558,8 +558,8 @@ We explore parameter value in the following ranges.
 </table>
 
 </section>
-<section id="slide-orgcabcfde">
-<h4 id="orgcabcfde">Training</h4>
+<section id="slide-org6368e11">
+<h4 id="org6368e11">Training</h4>
 <aside class="notes">
 <p>
 For the record, Here are the details in case someone is interested in the particular setup
@@ -612,8 +612,8 @@ Stochastic Gradient Descent (SGD) + bells and whistles
 </table>
 
 </section>
-<section id="slide-org9c6d4ff">
-<h3 id="org9c6d4ff">Voices</h3>
+<section id="slide-org6708b1c">
+<h3 id="org6708b1c">Voices</h3>
 <aside class="notes">
 <p>
 In order to engage the user, we developed a feature that we call &rsquo;voices&rsquo;
@@ -637,12 +637,12 @@ Overfitting: situation where a model stays very close to its training data
 </section>
 </section>
 <section>
-<section id="slide-org4fdc494">
-<h2 id="org4fdc494"><span class="section-number-2">5</span> User Interface</h2>
+<section id="slide-orgca0613f">
+<h2 id="orgca0613f"><span class="section-number-2">5</span> User Interface</h2>
 <div class="outline-text-2" id="text-5">
 </div></section>
-<section id="slide-org41d871c">
-<h3 id="org41d871c">Visual Interface</h3>
+<section id="slide-org493793d">
+<h3 id="org493793d">Visual Interface</h3>
 <img alt="Image of the writing application" src="img/app1.png">
 
 <aside class="notes">
@@ -666,8 +666,8 @@ This allows them to understand the system&rsquo;s role within the process of wri
 </aside>
 
 </section>
-<section id="slide-org1bdb111" data-background="./img/app.gif" data-background-transition="slide">
-<h3 id="org1bdb111">Annotation</h3>
+<section id="slide-orgb301cd0" data-background="./img/app.gif" data-background-transition="slide">
+<h3 id="orgb301cd0">Annotation</h3>
 <aside class="notes">
 <p>
 The text is visually annotated, which reveals to the writer how generated text is affecting their own writing. 
@@ -686,8 +686,8 @@ As the writer works into text, they could easily lose track of its source; there
 </section>
 </section>
 <section>
-<section id="slide-org7c5b672">
-<h2 id="org7c5b672"><span class="section-number-2">6</span> Examples</h2>
+<section id="slide-org3a82a64">
+<h2 id="org3a82a64"><span class="section-number-2">6</span> Examples</h2>
 <aside class="notes">
 <p>
 However, you will not think about it. You need to know what&rsquo;s really going on. Do you still have a clue how it should be possible to solve the case? &ldquo;
@@ -698,8 +698,8 @@ However, you will not think about it. You need to know what&rsquo;s really going
 </section>
 </section>
 <section>
-<section id="slide-orge0bdd57">
-<h2 id="orge0bdd57"><span class="section-number-2">7</span> Conclusion</h2>
+<section id="slide-orge5d62a1">
+<h2 id="orge5d62a1"><span class="section-number-2">7</span> Conclusion</h2>
 <ul>
 <li>A new dutch edition of &rsquo;I, Robot&rsquo; with a 10th co-created story will be published in November</li>
 <li>The interface will be deployed for the general public</li>
