--- a/antwerp-nlpmeetup-18/index.html
+++ b/antwerp-nlpmeetup-18/index.html
@@ -28,12 +28,12 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1>Synthetic Literature</h1><h3>Writing Science-Fiction in a Co-Creative Process</h3><h4>Enrique Manjavacas &amp; Folgert Karsdorp &amp; Ben Burtenshaw &amp; Mike Kestemont</h4><h4>NLP MeetUp - Antwerp - 04/09/2017</h4><p><a href="https://emanjavacas.github.com/slides-content/antwerp-nlpmeetup-18">https://emanjavacas.github.com/slides-content/antwerp-nlpmeetup-18</a></p>
+<section id="sec-title-slide"><h1>Synthetic Literature</h1><h3>Writing Science-Fiction in a Co-Creative Process</h3><h4>Enrique Manjavacas &amp; Folgert Karsdorp &amp; Ben Burtenshaw &amp; Mike Kestemont</h4><h4>NLP MeetUp - Antwerp - 01/02/2018</h4><p><a href="https://emanjavacas.github.com/slides-content/antwerp-nlpmeetup-18">https://emanjavacas.github.com/slides-content/antwerp-nlpmeetup-18</a></p>
 </section>
 
 <section>
-<section id="slide-org3f8af81">
-<h2 id="org3f8af81"><span class="section-number-2">1</span> Background</h2>
+<section id="slide-org33d135e">
+<h2 id="org33d135e"><span class="section-number-2">1</span> Background</h2>
 <ul>
 <li class="fragment roll-in">Stichting Collective for the Promotion of the Dutch Book (CPNB)</li>
 <li class="fragment roll-in">Dutch Book Week</li>
@@ -64,8 +64,8 @@ The CPNB is a trust and PR agency based in The Netherlands that aims to promote 
 </aside>
 
 </section>
-<section id="slide-org0a15d3b">
-<h3 id="org0a15d3b">The Request</h3>
+<section id="slide-orgb2f3e46">
+<h3 id="orgb2f3e46">The Request</h3>
 <p>
 Write a story about robots, using a robot, in relation to &ldquo;I, Robot&rdquo;
 </p>
@@ -83,8 +83,8 @@ So originally we were asked for a full novel.
 
 
 </section>
-<section id="slide-org8108a33">
-<h3 id="org8108a33">The Proposal</h3>
+<section id="slide-org001bb01">
+<h3 id="org001bb01">The Proposal</h3>
 <p>
 Co-creatively write a science-fiction story using a system trained on similar literature
 </p>
@@ -114,8 +114,8 @@ We proposed a system that allowed an author to orchestrate generated text into a
 
 
 </section>
-<section id="slide-orgfe107cd">
-<h3 id="orgfe107cd">The Author: Ronald Giphart</h3>
+<section id="slide-org148a65c">
+<h3 id="org148a65c">The Author: Ronald Giphart</h3>
 <img src="img/rg.jpg" alt="Image of Ronalf Giphart">
 
 <aside class="notes">
@@ -145,8 +145,8 @@ Here, taking user edit behavior as a proxy for output quality.
 </section>
 </section>
 <section>
-<section id="slide-org2406a1b">
-<h2 id="org2406a1b"><span class="section-number-2">2</span> Co-creativity</h2>
+<section id="slide-orgcbeeb90">
+<h2 id="orgcbeeb90"><span class="section-number-2">2</span> Co-creativity</h2>
 <blockquote nil>
 <p>
 &#x2026; a collaborative process between multiple agents, where in this context, one agent is a computational system. 
@@ -170,8 +170,8 @@ Davis sees co-creativity as the ’blending’ of improvisational forces [@davis
 </aside>
 
 </section>
-<section id="slide-org9d85653">
-<h3 id="org9d85653">Different Takes on Co-creativity</h3>
+<section id="slide-org5a7cf69">
+<h3 id="org5a7cf69">Different Takes on Co-creativity</h3>
 <ul>
 <li>Lubart (2005) clarifies co-creativity into four distinct roles for a computational system</li>
 <li class="fragment roll-in">Computer as <b>nanny</b>, <b>penpal</b>, <b>coach</b> or <b>colleague</b></li>
@@ -194,8 +194,8 @@ In this project we are most interested in achieving the last, though in practice
 </aside>
 
 </section>
-<section id="slide-org4b642dc">
-<h4 id="org4b642dc">Computer as colleague</h4>
+<section id="slide-org21db89b">
+<h4 id="org21db89b">Computer as colleague</h4>
 <ul>
 <li class="fragment roll-in">A competent agent within the writing process</li>
 <li class="fragment roll-in">A verifiable contribution to the end product</li>
@@ -213,8 +213,8 @@ Their role may overlap heavily with the user, but their participation is certain
 
 
 </section>
-<section id="slide-org764c714">
-<h4 id="org764c714">Computer as penpal</h4>
+<section id="slide-org0e55397">
+<h4 id="org0e55397">Computer as penpal</h4>
 <ul>
 <li class="fragment roll-in">A subordinate agent, that eases the objective of the user</li>
 <li class="fragment roll-in">Does not challenge the user</li>
@@ -248,13 +248,13 @@ We gave them a detailed explanation of the output of generated text, with multip
 </section>
 </section>
 <section>
-<section id="slide-org0376f44">
-<h2 id="org0376f44"><span class="section-number-2">3</span> Method</h2>
+<section id="slide-org98fea96">
+<h2 id="org98fea96"><span class="section-number-2">3</span> Method</h2>
 <div class="outline-text-2" id="text-3">
 </div>
 </section>
-<section id="slide-org8a145a7">
-<h3 id="org8a145a7">Data Collection and Preprocessing</h3>
+<section id="slide-orgded8730">
+<h3 id="orgded8730">Data Collection and Preprocessing</h3>
 <aside class="notes">
 <p>
 Automatically collected corpus of dutch novels.
@@ -269,8 +269,8 @@ For comparison, dutch wikipedia is about 300m words.
 </ul>
 
 </section>
-<section id="slide-org04cdd1f">
-<h4 id="org04cdd1f">Statistics</h4>
+<section id="slide-orge2205a9">
+<h4 id="orge2205a9">Statistics</h4>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -310,13 +310,13 @@ For comparison, dutch wikipedia is about 300m words.
 
 
 </section>
-<section id="slide-org3bf1182">
-<h3 id="org3bf1182">Recurrent Neural Network Language Model (RNNLM) for Text Generation</h3>
-<div class="outline-text-3" id="text-org3bf1182">
+<section id="slide-orgbba2cce">
+<h3 id="orgbba2cce">Recurrent Neural Network Language Model (RNNLM) for Text Generation</h3>
+<div class="outline-text-3" id="text-orgbba2cce">
 </div>
 </section>
-<section id="slide-orgb8ad15a">
-<h4 id="orgb8ad15a">Language Model</h4>
+<section id="slide-org0284eb4">
+<h4 id="org0284eb4">Language Model</h4>
 <p>
 \(P(The, cat, sat, on, the, mat, .)\) =
 <br/><span class="fragment fade-in"> \(P(The | \text{<}bos\text{>})\)
@@ -359,8 +359,8 @@ RNNLM Implementation (Embedding + RNN Layer + Output Softmax)
 
 
 </section>
-<section id="slide-org2c0d9f8">
-<h4 id="org2c0d9f8">Text Generation</h4>
+<section id="slide-orgd44b679">
+<h4 id="orgd44b679">Text Generation</h4>
 <p>
 Sample &ldquo;n&rdquo; characters from the Language Model
 </p>
@@ -395,8 +395,8 @@ Multinomial sampling with temperature
 
 
 </section>
-<section id="slide-org570f2a0">
-<h4 id="org570f2a0">Character-level</h4>
+<section id="slide-org18f42c3">
+<h4 id="org18f42c3">Character-level</h4>
 <p>
 We run the model over <b>characters</b>
 </p>
@@ -409,8 +409,8 @@ We run the model over <b>characters</b>
 
 
 </section>
-<section id="slide-org57fb814">
-<h3 id="org57fb814">Model fitting</h3>
+<section id="slide-org1a78032">
+<h3 id="org1a78032">Model fitting</h3>
 <ul>
 <li>Different parameter configurations resulting in different model sizes</li>
 <li>Sizes range from medium (10M) to big (90m)</li>
@@ -418,8 +418,8 @@ We run the model over <b>characters</b>
 </ul>
 
 </section>
-<section id="slide-orga100885">
-<h4 id="orga100885">Model parameters</h4>
+<section id="slide-orga626e3f">
+<h4 id="orga626e3f">Model parameters</h4>
 <aside class="notes">
 <p>
 We explore parameter value in the following ranges.
@@ -465,8 +465,8 @@ We explore parameter value in the following ranges.
 
 
 </section>
-<section id="slide-org3796b17">
-<h4 id="org3796b17">Training</h4>
+<section id="slide-org793e6a5">
+<h4 id="org793e6a5">Training</h4>
 <aside class="notes">
 <p>
 For the record, Here are the details in case someone is interested in the particular setup
@@ -520,8 +520,8 @@ Stochastic Gradient Descent (SGD) + bells and whistles
 
 
 </section>
-<section id="slide-org761038c">
-<h3 id="org761038c">Voices</h3>
+<section id="slide-org4721493">
+<h3 id="org4721493">Voices</h3>
 <aside class="notes">
 <p>
 In order to engage the user, we developed a feature that we call &rsquo;voices&rsquo;
@@ -546,13 +546,13 @@ Overfitting: situation where a model stays very close to its training data
 </section>
 </section>
 <section>
-<section id="slide-org4b6fb69">
-<h2 id="org4b6fb69"><span class="section-number-2">4</span> User Interface</h2>
+<section id="slide-org0248741">
+<h2 id="org0248741"><span class="section-number-2">4</span> User Interface</h2>
 <div class="outline-text-2" id="text-4">
 </div>
 </section>
-<section id="slide-orgd29b27e">
-<h3 id="orgd29b27e">User Interface</h3>
+<section id="slide-orgb524036">
+<h3 id="orgb524036">User Interface</h3>
 <img alt="Image of the writing application" src="img/app1.png">
 
 <aside class="notes">
@@ -577,8 +577,8 @@ This allows them to understand the system&rsquo;s role within the process of wri
 
 
 </section>
-<section id="slide-org07bdcfe" data-background="./img/app.gif" data-background-transition="slide">
-<h3 id="org07bdcfe">Annotation</h3>
+<section id="slide-org3eb99ed" data-background="./img/app.gif" data-background-transition="slide">
+<h3 id="org3eb99ed">Annotation</h3>
 <aside class="notes">
 <p>
 The text is visually annotated, which reveals to the writer how generated text is affecting their own writing. 
@@ -598,8 +598,8 @@ As the writer works into text, they could easily lose track of its source; there
 </section>
 </section>
 <section>
-<section id="slide-orgc2dda63">
-<h2 id="orgc2dda63"><span class="section-number-2">5</span> Output</h2>
+<section id="slide-org1a4806a">
+<h2 id="org1a4806a"><span class="section-number-2">5</span> Output</h2>
 <ul>
 <li class="fragment roll-in">A new dutch edition of &rsquo;I, Robot&rsquo; with a 10th co-created story was published in November 2017</li>
 <li class="fragment roll-in">The interface was deployed for the general public during November 2017 (averaging 200 users/day)</li>
@@ -622,13 +622,13 @@ Going forward, our project intends to explore this process on a quantitative and
 </section>
 </section>
 <section>
-<section id="slide-orgb4c35f1">
-<h2 id="orgb4c35f1"><span class="section-number-2">6</span> Ongoing work</h2>
+<section id="slide-org623d9c6">
+<h2 id="org623d9c6"><span class="section-number-2">6</span> Ongoing work</h2>
 <div class="outline-text-2" id="text-6">
 </div>
 </section>
-<section id="slide-org8108bf0">
-<h3 id="org8108bf0">From character-level to word-level</h3>
+<section id="slide-orge5b4f86">
+<h3 id="orge5b4f86">From character-level to word-level</h3>
 <aside class="notes">
 <p>
 In fact, most recent breakthroughs in Language Modeling came through innovative dropout variants (Variational Dropout; Weight Dropout; Zoneout)
@@ -695,8 +695,8 @@ In fact, most recent breakthroughs in Language Modeling came through innovative 
 
 
 </section>
-<section id="slide-org16f06b7">
-<h3 id="org16f06b7">Opening new horizons (Mixture Models)&#x2026;</h3>
+<section id="slide-org0ebbd03">
+<h3 id="org0ebbd03">Opening new horizons (Mixture Models)&#x2026;</h3>
 <ul>
 <li>Pointer-based Language Models</li>
 <li>Latent Topic Language Models (credits to <a href="https://www.timvandecruys.be">Tim van de Cruys</a>)</li>
@@ -704,8 +704,8 @@ In fact, most recent breakthroughs in Language Modeling came through innovative 
 </ul>
 
 </section>
-<section id="slide-org9ac1882">
-<h4 id="org9ac1882">Mixing output distributions 1: Pointer-based Language Models</h4>
+<section id="slide-orgd5d68f8">
+<h4 id="orgd5d68f8">Mixing output distributions 1: Pointer-based Language Models</h4>
 <img src="img/rnnlm.svg" alt="RNNLM">
 
 </section>
@@ -731,8 +731,8 @@ In fact, most recent breakthroughs in Language Modeling came through innovative 
 </ul>
 
 </section>
-<section id="slide-orgc6ac5ef">
-<h4 id="orgc6ac5ef">Mixing output distributions 2: Latent Topic Language Models</h4>
+<section id="slide-org505fff5">
+<h4 id="org505fff5">Mixing output distributions 2: Latent Topic Language Models</h4>
 <p>
 <b>Non-Negative Matrix Factorization</b>
 </p>
@@ -767,8 +767,8 @@ Latent Topic Language Model
 </ul>
 
 </section>
-<section id="slide-org257d093">
-<h3 id="org257d093">&#x2026; and challenges (due to the large vocabulary)</h3>
+<section id="slide-org668be54">
+<h3 id="org668be54">&#x2026; and challenges (due to the large vocabulary)</h3>
 <ul>
 <li class="fragment roll-in">Slow training due to parameter explosion (embedding size x vocabulary)</li>
 <li class="fragment roll-in">Output distribution rely too much on <code>&lt;Unk&gt;</code></li>
@@ -776,8 +776,8 @@ Latent Topic Language Model
 </ul>
 
 </section>
-<section id="slide-org603827b">
-<h4 id="org603827b">Solutions for the input embeddings</h4>
+<section id="slide-org8c43fbd">
+<h4 id="org8c43fbd">Solutions for the input embeddings</h4>
 <p>
 Process input at the character level producing word-level embeddings (CNN, RNN)
 </p>
@@ -785,8 +785,8 @@ Process input at the character level producing word-level embeddings (CNN, RNN)
 <img src="img/charCNNadapted.jpg" alt="Char-CNN">
 
 </section>
-<section id="slide-org25d0422">
-<h4 id="org25d0422">Solutions for the output embeddings (during training)</h4>
+<section id="slide-org87149d2">
+<h4 id="org87149d2">Solutions for the output embeddings (during training)</h4>
 <p>
 Since reducing the vocabulary size is not advised, speed up the Softmax computation during training
 </p>
@@ -797,6 +797,12 @@ Since reducing the vocabulary size is not advised, speed up the Softmax computat
 <li class="fragment roll-in"><a href="https://arxiv.org/abs/1609.04309">Adaptive Softmax (2016)</a></li>
 
 </ul>
+
+</section>
+</section>
+<section>
+<section id="slide-org46fd1c9">
+<h2 id="org46fd1c9"><span class="section-number-2">7</span> Thanks!</h2>
 </section>
 </section>
 </div>
